--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -2,21 +2,22 @@ aside {
     height: 100%;
     position: absolute;
     background: white;
-    z-index: 1;
+    z-index: 5;
 }
 
 aside .body {
     height: calc(100% - 54px);
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
-aside div {
+aside > div {
     cursor: pointer;
     padding-bottom: 10px;
 }
 
 aside .react-datepicker-wrapper {
     padding-right: 30px;
+    padding-left: 10px;
 }
 
 aside td {
